// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bottomTpl slot test 1`] = `
<div>
  <div
    class="nut-biz-card"
  >
    <div
      class="nut-biz-card__main"
    >
      <a
        class="nut-biz-card__left"
      >
        <div
          class="nut-image  "
        >
          <img
            alt=""
            class="nut-img"
            src="//img10.360buyimg.com/n2/s240x240_jfs/t1/210890/22/4728/163829/6163a590Eb7c6f4b5/6390526d49791cb9.jpg!q70.jpg"
            style="object-fit: fill; object-position: center;"
          />
          <div
            class="nut-img-loading"
          >
            <i
              class="nutui-iconfont nut-icon nut-icon-image "
            />
          </div>
        </div>
      </a>
      <div
        class="nut-biz-card__right"
      >
        <div
          class="nut-biz-card__right__title multiple-lines"
        >
          活蟹】湖塘煙雨 阳澄湖大闸蟹公4.5两 母3.5两 4对8只 鲜活生鲜螃蟹现货水产礼盒海鲜水
        </div>
        <div
          class="nut-biz-card__right__price"
        >
          <div
            class="nut-price "
          >
            <div
              class="nut-price__symbol nut-price__symbol-large"
            >
              ¥
            </div>
            <div
              class="nut-price__integer nut-price__integer-large"
            >
              388
            </div>
            <div
              class="nut-price__decimal nut-price__decimal-large"
            >
              .
            </div>
            <div
              class="nut-price__decimal nut-price__decimal-large"
            >
              00
            </div>
          </div>
          <div
            class="nut-price nut-biz-card__right__price__origin"
          >
            <div
              class="nut-price__symbol nut-price__symbol-large"
            >
              ¥
            </div>
            <div
              class="nut-price__integer nut-price__integer-large"
            >
              378
            </div>
            <div
              class="nut-price__decimal nut-price__decimal-large"
            >
              .
            </div>
            <div
              class="nut-price__decimal nut-price__decimal-large"
            >
              00
            </div>
          </div>
        </div>
        <div
          class="nut-biz-card__right__other"
        >
          <div
            class="nut-tag
    nut-tag--danger
    
    
    
     undefined"
          >
            <span
              class="text"
            >
              自营
            </span>
          </div>
          <div
            class="nut-tag
    nut-tag--default
    nut-tag--plain
    
    
     undefined"
          >
            <span
              class="text"
            >
              厂商配送
            </span>
          </div>
        </div>
        <div
          class="nut-biz-card__right__shop"
        >
          <div
            class="nut-biz-card__right__shop__name"
          >
            阳澄湖大闸蟹自营店&gt;
          </div>
        </div>
      </div>
    </div>
    <div
      style="font-size: 12px;"
    >
      自定义
    </div>
  </div>
</div>
`;

exports[`prolistTpl slot test 1`] = `
<div>
  <div
    class="nut-biz-card"
  >
    <div
      class="nut-biz-card__main"
    >
      <a
        class="nut-biz-card__left"
      >
        <div
          class="nut-image  "
        >
          <img
            alt=""
            class="nut-img"
            src="//img10.360buyimg.com/n2/s240x240_jfs/t1/210890/22/4728/163829/6163a590Eb7c6f4b5/6390526d49791cb9.jpg!q70.jpg"
            style="object-fit: fill; object-position: center;"
          />
          <div
            class="nut-img-loading"
          >
            <i
              class="nutui-iconfont nut-icon nut-icon-image "
            />
          </div>
        </div>
      </a>
      <div
        class="nut-biz-card__right"
      >
        <div
          class="nut-biz-card__right__title multiple-lines"
        >
          活蟹】湖塘煙雨 阳澄湖大闸蟹公4.5两 母3.5两 4对8只 鲜活生鲜螃蟹现货水产礼盒海鲜水
        </div>
        <div
          class="search_prolist_attr"
        >
          <span
            class="word"
          >
            鲜活
          </span>
          <span
            class="word"
          >
            礼盒
          </span>
          <span
            class="word"
          >
            国产
          </span>
        </div>
        <div
          class="nut-biz-card__right__price"
        >
          <div
            class="nut-price "
          >
            <div
              class="nut-price__symbol nut-price__symbol-large"
            >
              ¥
            </div>
            <div
              class="nut-price__integer nut-price__integer-large"
            >
              388
            </div>
            <div
              class="nut-price__decimal nut-price__decimal-large"
            >
              .
            </div>
            <div
              class="nut-price__decimal nut-price__decimal-large"
            >
              00
            </div>
          </div>
          <div
            class="nut-price nut-biz-card__right__price__origin"
          >
            <div
              class="nut-price__symbol nut-price__symbol-large"
            >
              ¥
            </div>
            <div
              class="nut-price__integer nut-price__integer-large"
            >
              378
            </div>
            <div
              class="nut-price__decimal nut-price__decimal-large"
            >
              .
            </div>
            <div
              class="nut-price__decimal nut-price__decimal-large"
            >
              00
            </div>
          </div>
        </div>
        <div
          class="nut-biz-card__right__other"
        >
          <div
            class="nut-tag
    nut-tag--danger
    
    
    
     undefined"
          >
            <span
              class="text"
            >
              自营
            </span>
          </div>
          <div
            class="nut-tag
    nut-tag--default
    nut-tag--plain
    
    
     undefined"
          >
            <span
              class="text"
            >
              厂商配送
            </span>
          </div>
        </div>
        <div
          class="nut-biz-card__right__shop"
        >
          <div
            class="nut-biz-card__right__shop__name"
          >
            阳澄湖大闸蟹自营店&gt;
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
